--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         frameworkUrl: "Build/UnityToWeb_Test.framework.js",
         codeUrl: "Build/UnityToWeb_Test.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "worp",
+        companyName: "DefaultCompany",
         productName: "UnityToWeb_Test",
-        productVersion: "1.0",
+        productVersion: "0.1.0",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
